Fix misalignment of the faux rounded corner in Safari which renders the h1 with a height of 4 causing visual issue

--- a/wdn/templates_3.0/css/header/header.css
+++ b/wdn/templates_3.0/css/header/header.css
@@ -14,6 +14,7 @@
     padding: 12px 12px 0 12px;
 }
 #header h1 {
+    height: 0; /* Safari */
     margin: 13px 0 0 0;
     padding: 12px 10px;
     float: left;
